--- a/src/main/resources/com/matteotocci/app/login.fxml
+++ b/src/main/resources/com/matteotocci/app/login.fxml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="487.0" prefWidth="841.0" stylesheets="@css/stile_login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="296.0" layoutY="87.0" prefHeight="200.0" prefWidth="200.0" />
+      <BorderPane layoutY="-2.0" prefHeight="494.0" prefWidth="841.0">
+         <left>
+            <Pane fx:id="panesx" prefHeight="494.0" prefWidth="421.0" style="-fx-background-color: green;" stylesheets="@css/stile_login.css" BorderPane.alignment="CENTER" />
+         </left>
+         <center>
+            <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Pane prefHeight="200.0" prefWidth="200.0" />
+                  <Pane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <TextField layoutX="96.0" layoutY="99.0" prefHeight="40.0" prefWidth="245.0" promptText="Email" />
+                        <PasswordField layoutX="96.0" layoutY="169.0" prefHeight="40.0" prefWidth="245.0" promptText="Password" />
+                        <Button layoutX="158.0" layoutY="241.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button" />
+                        <Button layoutX="50.0" layoutY="384.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="336.0" text="Non sei registrato? Fallo adesso!" />
+                     </children>
+                  </Pane>
+               </children>
+            </StackPane>
+         </center>
+      </BorderPane>
+   </children>
+</AnchorPane>
