--- a/src/main/resources/com/matteotocci/app/login.fxml
+++ b/src/main/resources/com/matteotocci/app/login.fxml
@@ -1,32 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="487.0" prefWidth="841.0" stylesheets="@css/stile_login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="494.0" prefWidth="841.0" stylesheets="@css/stile_login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.login">
    <children>
-      <AnchorPane layoutX="296.0" layoutY="87.0" prefHeight="200.0" prefWidth="200.0" />
       <BorderPane layoutY="-2.0" prefHeight="494.0" prefWidth="841.0">
          <left>
-            <Pane fx:id="panesx" prefHeight="494.0" prefWidth="421.0" style="-fx-background-color: green;" stylesheets="@css/stile_login.css" BorderPane.alignment="CENTER" />
+            <Pane fx:id="panesx" prefWidth="370.0" styleClass="linear-grad" stylesheets="@css/stile_login.css" BorderPane.alignment="CENTER">
+               <children>
+                  <ImageView fitHeight="240.0" fitWidth="241.0" layoutX="65.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@immagini/logo-removebg-preview.png" />
+                     </image>
+                  </ImageView>
+               </children></Pane>
          </left>
          <center>
             <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Pane prefHeight="200.0" prefWidth="200.0" />
-                  <Pane prefHeight="200.0" prefWidth="200.0">
+                  <VBox fx:id="vboxr" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                      <children>
-                        <TextField layoutX="96.0" layoutY="99.0" prefHeight="40.0" prefWidth="245.0" promptText="Email" />
-                        <PasswordField layoutX="96.0" layoutY="169.0" prefHeight="40.0" prefWidth="245.0" promptText="Password" />
-                        <Button layoutX="158.0" layoutY="241.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button" />
-                        <Button layoutX="50.0" layoutY="384.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="336.0" text="Non sei registrato? Fallo adesso!" />
+                        <Label alignment="TOP_CENTER" prefHeight="56.0" prefWidth="209.0" text="Registrati">
+                           <font>
+                              <Font name="System Bold" size="37.0" />
+                           </font>
+                        </Label>
+                        <TextField prefHeight="40.0" prefWidth="305.0" promptText="Nome" />
+                        <TextField prefHeight="40.0" prefWidth="305.0" promptText="Cognome" />
+                        <TextField prefHeight="40.0" prefWidth="305.0" promptText="Email" />
+                        <PasswordField prefHeight="40.0" prefWidth="305.0" promptText="Password" />
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="bottone1" text="Sing up">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#switchToBoxl" prefHeight="50.0" prefWidth="352.0" styleClass="bottone2" stylesheets="@css/stile_login.css" text="Sei già registrato? Accedi!">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <VBox.margin>
+                              <Insets top="40.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
-                  </Pane>
+                     <padding>
+                        <Insets bottom="20.0" left="60.0" right="60.0" top="50.0" />
+                     </padding>
+                  </VBox>
+                  <VBox fx:id="vboxl" alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" opacity="0.0" prefHeight="200.0" prefWidth="100.0" spacing="30.0" visible="false">
+                     <children>
+                        <Label alignment="TOP_CENTER" prefHeight="56.0" prefWidth="209.0" text="Accedi">
+                           <font>
+                              <Font name="System Bold" size="37.0" />
+                           </font>
+                        </Label>
+                        <TextField prefHeight="40.0" prefWidth="305.0" promptText="Email" />
+                        <PasswordField prefHeight="40.0" prefWidth="305.0" promptText="Password" />
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="bottone1" text="Sign in">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#switchToBoxr" prefHeight="50.0" prefWidth="352.0" styleClass="bottone2" stylesheets="@css/stile_login.css" text="Non sei registrato? Fallo adesso!">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <VBox.margin>
+                              <Insets top="40.0" />
+                           </VBox.margin>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets bottom="20.0" left="60.0" right="60.0" top="50.0" />
+                     </padding>
+                  </VBox>
                </children>
             </StackPane>
          </center>
