--- a/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
+++ b/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
+<AnchorPane fx:id="modificaPasswordRoot" prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
     <children>
         <VBox layoutX="0.0" layoutY="0.0" prefHeight="350.0" prefWidth="180.0" style="-fx-background-color: #f0f0f0;">
             <children>
@@ -67,7 +67,7 @@
                         </GridPane>
                         <HBox alignment="BOTTOM_RIGHT">
                             <children>
-                                <Button style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" onMouseClicked="#salvaNuovaPassword" />
+                                <Button fx:id="salvaPasswordButton" style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" onMouseClicked="#salvaNuovaPassword" />
                             </children>
                         </HBox>
                     </children>
