--- a/src/main/resources/com/matteotocci/app/Alimenti.fxml
+++ b/src/main/resources/com/matteotocci/app/Alimenti.fxml
@@ -12,36 +12,60 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="578.0" prefWidth="1037.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.HomePage">
+<AnchorPane prefHeight="578.0" prefWidth="1037.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.Alimenti">
     <children>
-        <VBox layoutX="52.0" layoutY="107.0" prefHeight="578.0" prefWidth="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <HBox prefHeight="69.0" prefWidth="180.0">
-                    <children>
-                        <ImageView fitHeight="70.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@immagini/omino_profilo.jpg" />
-                            </image>
-                        </ImageView>
-                        <Label prefHeight="74.0" prefWidth="114.0" text="Nome e Cognome" />
-                    </children>
-                </HBox>
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Button" />
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="80.0" prefWidth="180.0" text="Button" />
-                <Button mnemonicParsing="false" prefHeight="79.0" prefWidth="198.0" text="Button" />
-                <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="83.0" prefWidth="212.0" text="Alimenti">
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-            </children>
-        </VBox>
-      <TableView layoutX="181.0" layoutY="40.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="40.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <TextField layoutX="344.0" layoutY="2.0" prefHeight="42.0" prefWidth="857.0" promptText="Cerca alimento.." AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="0.0" />
+      <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+             <VBox prefHeight="578.0" prefWidth="180.0">
+                 <children>
+                     <HBox prefHeight="69.0" prefWidth="180.0">
+                         <children>
+                             <ImageView fitHeight="70.0" fitWidth="68.0" onMouseClicked="#AccessoProfilo" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                     <Image url="@immagini/omino_profilo.jpg" />
+                                 </image>
+                             </ImageView>
+                             <Label fx:id="nomeUtenteLabelHomePage" prefHeight="74.0" prefWidth="114.0" text="Nome e Cognome" />
+                         </children>
+                     </HBox>
+                     <Button fx:id="BottoneHome" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoHome" prefHeight="75.0" prefWidth="180.0" text="Home Page" />
+                     <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="80.0" prefWidth="180.0" text="Ricette" />
+                     <Button mnemonicParsing="false" prefHeight="79.0" prefWidth="198.0" text="Piano Alimentare" />
+                     <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="83.0" prefWidth="212.0" text="Alimenti">
+                         <cursor>
+                             <Cursor fx:constant="HAND" />
+                         </cursor>
+                     </Button>
+                 </children>
+             </VBox>
+            <VBox prefHeight="578.0" prefWidth="863.0">
+               <children>
+                  <HBox prefHeight="52.0" prefWidth="861.0">
+                     <children>
+                  
+                          <TextField fx:id="cercaAlimento" prefHeight="42.0" prefWidth="774.0" promptText="Cerca alimento.." />
+                         <Button fx:id="bottoneCerca" onAction="#handleCercaAlimento" prefHeight="43.0" prefWidth="173.0" text="Cerca" />
+
+                     </children>
+                  </HBox>
+                    <TableView fx:id="tableView" prefHeight="541.0" prefWidth="861.0">
+                        <columns>
+                            <TableColumn fx:id="immagineCol" text="Immagine" />
+                            <TableColumn fx:id="nomeCol" prefWidth="141" text="Nome" />
+                            <TableColumn fx:id="brandCol" text="Brand" />
+                            <TableColumn fx:id="calorieCol" prefWidth="80" text="Calorie" />
+                            <TableColumn fx:id="proteineCol" prefWidth="80" text="Proteine" />
+                            <TableColumn fx:id="carboidratiCol" prefWidth="80" text="Carboidrati" />
+                            <TableColumn fx:id="grassiCol" prefWidth="80" text="Grassi" />
+                            <TableColumn fx:id="grassiSatCol" prefWidth="80" text="Grassi Saturi" />
+                            <TableColumn fx:id="saleCol" prefWidth="80" text="Sale" />
+                            <TableColumn fx:id="fibreCol" prefWidth="80" text="Fibre" />
+                            <TableColumn fx:id="zuccheriCol" prefWidth="80" text="Zuccheri" />
+                        </columns>
+                    </TableView>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
     </children>
 </AnchorPane>
