--- a/src/main/resources/com/matteotocci/app/DettagliAlimento.fxml
+++ b/src/main/resources/com/matteotocci/app/DettagliAlimento.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -7,8 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettagliAlimentoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettagliAlimentoController">
    <children>
       <HBox layoutX="134.0" layoutY="116.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -24,7 +24,16 @@
                   <Label fx:id="saleLabel" />
                   <Label fx:id="fibreLabel" />
                   <Label fx:id="zuccheriLabel" />
-                  <Button onAction="#chiudiFinestra" text="Chiudi" />
+                  <HBox alignment="CENTER" prefHeight="61.0" prefWidth="260.0">
+                     <children>
+                        <Button onAction="#chiudiFinestra" text="Chiudi" />
+                        <Button fx:id="BottoneElimina" onAction="#handleEliminaAlimento" text="Elimina">
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
